invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_11.src
.IPPcode24
SUB LF@a int@49